state management , music and sounds

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">    
-    <title>BabylonJS Game</title>
+    <title>Curling Girl VS Mutant Soccer Players</title>
     <link rel="icon" type="image/x-icon" href="./favicon.ico">    
     <style>
         html, body {
@@ -33,7 +33,7 @@
       </style>
   </head>
   <body>
-    <canvas id="renderCanvas" touch-action="none"></canvas>
+    <canvas id="renderCanvas" ></canvas>
     <div id="fps">0</div>
   </body>
 </html>
